--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/v5-patch-for-react-19": "^1.0.3",
+    "@antv/s2": "^2.3.0",
+    "antd": "^5.24.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
@@ -22,6 +25,7 @@
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
+    "less": "^4.2.2",
     "vite": "^6.2.0"
   }
 }
