--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@antv/s2": "^2.3.0",
     "antd": "^5.24.5",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "rxjs": "^7.8.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
